--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "next dev --turbopack",
     "format": "prettier --write \"**/*.{js,jsx,ts,tsx,json,md}\"",
     "lint": "next lint",
-    "start": "next start"
+    "start": "next start",
+    "typecheck": "tsc --noEmit",
+    "ci": "pnpm run \"/lint|typecheck/\""
   },
   "dependencies": {
     "@radix-ui/react-dropdown-menu": "^2.1.6",
