--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
+    "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
@@ -32,6 +33,7 @@
     "resend": "^4.2.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "uuid": "^11.1.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.2"
   },
