--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
+    "react-markdown": "^10.1.0",
     "resend": "^4.2.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
