Add document signing feature with Supabase integration and admin management

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
     "@radix-ui/react-toast": "^1.2.6",
+    "@supabase/supabase-js": "^2.49.4",
+    "@types/react-signature-canvas": "^1.0.7",
     "@types/uuid": "^10.0.0",
     "@vercel/analytics": "^1.5.0",
     "@vercel/speed-insights": "^1.2.0",
@@ -29,10 +31,12 @@
     "lucide-react": "^0.487.0",
     "next": "15.2.4",
     "next-intl": "^3.0.0-rc.2",
+    "pdf-lib": "^1.17.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.55.0",
     "react-markdown": "^10.1.0",
+    "react-signature-canvas": "1.1.0-alpha.2",
     "resend": "^4.2.0",
     "tailwind-merge": "^3.1.0",
     "tailwindcss-animate": "^1.0.7",
@@ -51,7 +55,7 @@
     "eslint": "^9",
     "eslint-config-next": "15.2.4",
     "postcss": "^8.5.3",
-    "prettier": "^3.5.3",
+    "prettier": "^3.4.2",
     "prettier-plugin-organize-imports": "^4.1.0",
     "prettier-plugin-packagejson": "^2.5.10",
     "prettier-plugin-tailwindcss": "^0.6.11",
